<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="8dp"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/list_item"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/empty_list_placeholder"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/placeholder_no_data"
                android:src="@drawable/no_data"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@android:color/transparent"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="4dp"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <!-- weird bug -->
                    <!-- https://stackoverflow.com/questions/67419323/how-can-i-solve-android-studio-4-2-rendering-problem-->
                    <EditText
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_corners_8dp"
                        android:drawablePadding="4dp"
                        android:elevation="4dp"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="12dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />


                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/progress_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="2dp"
                        android:elevation="6dp"
                        android:indeterminate="true"
                        android:visibility="gone"
                        app:indicatorColor="@color/very_light_blue"
                        app:trackColor="@color/platinum"
                        app:trackCornerRadius="4dp"
                        tools:visibility="visible" />

                </FrameLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>